# geqo

./: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  GETTING_STARTED.md  README.md  SConstruct  project.godot
doc_classes/: ContextInGroup2D.xml  ContextInGroup3D.xml  ContextQueryItems2D.xml  ContextQueryItems3D.xml  ContextTargetArray2D.xml  ContextTargetArray3D.xml  ContextTargetNode2D.xml  ContextTargetNode3D.xml  EnvironmentQuery2D.xml  EnvironmentQuery3D.xml  GEQODebugSpheres2D.xml  GEQODebugSpheres3D.xml  GEQOEnums.xml  GeneratorCircleShape2D.xml  GeneratorCircleShape3D.xml  GeneratorGridShape2D.xml  GeneratorGridShape3D.xml  GeneratorInArray3D.xml  GeneratorInGroup2D.xml  GeneratorInGroup3D.xml  QueryContext2D.xml  QueryContext3D.xml  QueryGenerator2D.xml  QueryGenerator3D.xml  QueryInstance2D.xml  QueryInstance3D.xml  QueryItem2D.xml  QueryItem3D.xml  QueryResult2D.xml  QueryResult3D.xml  QueryTest2D.xml  QueryTest3D.xml  TestDistanceTo2D.xml  TestDistanceTo3D.xml  TestDotProduct2D.xml  TestDotProduct3D.xml  TestIntersectsArea3D.xml  TestPathFindTo3D.xml  TestRaycastTo2D.xml  TestRaycastTo3D.xml
project/: Godot Environment Query Orchestrator.csproj  Godot Environment Query Orchestrator.sln  context_target_array.gd  context_target_array.gd.uid  context_target_array.tscn  project.godot
src/: CMakeLists.txt  context_in_group3d.cpp  context_in_group3d.h  context_target_node3d.cpp  context_target_node3d.h  environment_query.cpp  environment_query.h  environment_query2d.cpp  environment_query2d.h  environment_query3d.cpp  environment_query3d.h  (+29 more)
(+462 files in other folders)
